<resources>
    <string name="app_name">PrimerProyecto</string>
    <string name="String_tvRL">Texto dentro de relative Layout</string>
    <string name="String_hint_etRL">Ingresa tu texto</string>
    <string name="String_btnRL">Enviar</string>
    <string name="tienes_tarjeta_de_credito">¿Tienes tarjeta de credito?</string>
    <string name="rb_masculino">Masculino</string>
    <string name="rb_femenino">Femenino</string>
    <bool name="strue">true</bool>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="tiene_alguna_enfermedad">¿Tiene alguna Enfermedad?</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="motivo_de_su_vicita">¿Motivo de su visita?</string>
    <string name="guardar">GUARDAR</string>
    <string name="home">Home</string>
    <string name="car">Car</string>
    <string name="credentials">credentials</string>
    <string name="user">user</string>
    <string name="animal">Animal</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>


</resources>